--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,14 @@
 
 export(build_dict)
 export(calc_max_members)
+export(create_imputation_possibilities)
+export(create_imputations_table)
+export(expectation_phase)
 export(generate_obs_list)
+export(obs_list_to_dict)
+export(preparing_for_EM)
+export(prob_permutations)
+export(run_EM)
 import(Ryacas)
+import(stringr)
+import(tidyr)
