--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R:
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
-Imports: Ryacas, stringr
+Imports: Ryacas, stringr, readr, tidyr, dplyr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
