--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,9 @@ import(Ryacas)
 import(readr)
 import(stringr)
 import(tidyr)
+importFrom(dplyr,left_join)
+importFrom(dplyr,select)
+importFrom(stats,optim)
+importFrom(stats,rbeta)
+importFrom(stats,rbinom)
+importFrom(stats,rpois)
