--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,7 @@ Authors@R:
            email = "oronmadmon@gmail.com",
            comment = c(ORCID = "0000-0003-3096-9587"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Imports: Ryacas, stringr, readr, tidyr, dplyr
 Encoding: UTF-8
 LazyData: true
